feat: Add workflows for github-action pipeline